# Receipt-Scanner

./: .gitignore  Dockerfile  README.md  docker-compose.yml  experiments.ipynb  pyproject.toml  requirements.txt  test.py
src/: app.py  inferenceEngine.py  schemas.py  utils.py
